@@ -1,4 +1,4 @@
-/* $Id: conf.c,v 1.55 2008/09/02 04:15:33 manu Exp $ */
+/* $Id: conf.c,v 1.56 2008/09/07 00:13:34 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: conf.c,v 1.55 2008/09/02 04:15:33 manu Exp $");
+__RCSID("$Id: conf.c,v 1.56 2008/09/07 00:13:34 manu Exp $");
 #endif
 #endif
 
@@ -74,6 +74,9 @@ __RCSID("$Id: conf.c,v 1.55 2008/09/02 04:15:33 manu Exp $");
 #endif
 #ifdef USE_DKIM
 #include "dkimcheck.h"
+#endif
+#ifdef USE_P0F
+#include "p0f.h"
 #endif
 #include "autowhite.h"
 #include "conf.h"
@@ -192,6 +195,9 @@ conf_load_internal(timestamp)
 #endif
 #ifdef USE_DKIM
 		dkimcheck_clear();
+#endif
+#ifdef USE_P0F
+		p0f_clear();
 #endif
 		all_list_clear();
 		macro_clear();
@@ -458,6 +464,8 @@ conf_defaults(c)
 #ifdef USE_DKIM
 	c->c_dkim = NULL;
 #endif
-
+#ifdef USE_P0F
+	c->c_p0fsock[0] = '\0';
+#endif
 	return;
 }
